Fix width overflow problem

--- a/views/style2.css
+++ b/views/style2.css
@@ -4,10 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-sizing: border-box;
-    width: 100vw;
     background: rgb(227, 252, 251);
     padding: 35vh 100px 0 100px;
+    box-sizing: border-box;
 }
 
     h1{
@@ -75,3 +74,7 @@
             max-width: 100%;
             border-radius: 35%;
         }
+
+    form{
+        margin-top: 200px;
+    }
